--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,279 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 20px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.spinner {
+  height: 80px;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.App-intro {
+  font-size: large;
+}
+
+/* new css for movie component */
+
+* {
+  box-sizing: border-box;
+}
+
+.movies {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.App-header h2 {
+  margin: 0;
+}
+
+.add-movies {
+  text-align: center;
+}
+
+.add-movies button {
+  font-size: 16px;
+  padding: 8px;
+  margin: 0 10px 30px 10px;
+}
+
+.movie {
+  padding: 5px 25px 10px 25px;
+  max-width: 25%;
+}
+.movie h2{
+  color:black;
+}
+
+.errorMessage {
+  margin: auto;
+  font-weight: bold;
+  color: rgb(161, 15, 15);
+}
+
+.search {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+input[type="submit"] {
+  padding: 5px;
+  background-color: transparent;
+  color: black;
+  border: 1px solid black;
+  width: 80px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #282c34;
+  color: antiquewhite;
+}
+
+.search > input[type="text"]{
+  width: 40%;
+  min-width: 170px;
+}
+
+@media screen and (min-width: 694px) and (max-width: 915px) {
+  .movie {
+    max-width: 33%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (min-width: 652px) and (max-width: 693px) {
+  .movie {
+    max-width: 50%;
+  }
+}
+
+@media screen and (max-width: 651px) {
+  .movie {
+    max-width: 100%;
+    margin: auto;
+  }
+}
+.specific-movie {
+  /* box-shadow: 0px 0px 5px 0px rgb(249, 159, 120); */
+  /* padding: 10px; */
+  max-width: 1070px;
+  margin: auto;
+}
+
+.movie-not-found {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+}
+
+.movie-not-found>div.header {
+  font-size: 50px;
+  font-weight: bolder;
+  color: rgb(249, 159, 120);
+}
+
+.movie-not-found>p {
+  font-size: 16px;
+  margin-top: 40px;
+  line-height: 40px;
+  max-width: 800px;
+}
+
+.specific-movie .loading-movie {
+  margin: 0px;
+}
+
+.specific-movie>.s-movie {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.specific-movie>.s-movie .s-movie-poster {
+  max-width: 250px;
+  margin: 25px;
+}
+
+.specific-movie>.s-movie .s-movie-poster>img {
+  max-width: 250px;
+  object-fit: cover;
+  border: 5px solid #fff;
+}
+
+.specific-movie>.s-movie .s-movie-poster>.no-poster {
+  width: 230px;
+  height: 330px;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #aaa;
+  border: 1px solid #fff;
+}
+
+.specific-movie>.s-movie>.s-movie-text {
+  max-width: 700px;
+  margin: 30px;
+}
+
+.specific-movie>.s-movie>.s-movie-text>.s-movie-nm {
+  font-size: 50px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow-x: hidden;
+  max-width: 83.5vw;
+}
+
+.specific-movie>.s-movie>.s-movie-text>.s-movie-release-year {
+  margin-top: 15px;
+  font-size: 18.5px;
+}
+
+.specific-movie>.s-movie>.s-movie-text>.s-movie-plot, .s-movie-plot {
+  margin: 40px 0px;
+  font-size: 18.5px;
+  word-spacing: 5px;
+  line-height: 30px;
+}
+
+.line-s {
+  height: 2px;
+  width: 100%;
+  background-color: #999;
+  margin: 25px 0px;
+}
+
+.specific-movie>.s-movie .s-movie-genres {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.specific-movie>.s-movie .s-movie-genres>.s-movie-genre {
+  margin: 5px 8px;
+}
+
+.specific-movie>.s-movie .s-movie-genres>.s-movie-genre {
+  background-color: #fff;
+  color: #000;
+  padding: 8px 10px;
+  border-radius: 3px;
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.movie-details {
+  flex-direction: row;
+}
+
+.i-header {
+  font-size: 30px;
+  margin: 25px auto;
+}
+
+.table>.line-s {
+  margin: 0px;
+}
+
+.table>.t-row {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 0px;
+  justify-content: center;
+}
+
+.table>.t-row>.name {
+  margin: 10px 25px;
+  width: max-content;
+  max-width: 250px;
+  font-size: 18.5px;
+  font-weight: bold;
+}
+
+.table>.t-row>.val {
+  margin: 10px 25px;
+  color: #bbb;
+  font-size: 17px;
+}
+
+@media (max-width:450px) {
+  .table {
+    flex-direction: column;
+  }
+}
+
+
+@media (max-width:650px) {
+  .specific-movie>.s-movie .s-movie-poster {
+    margin: 25px auto;
+  }
+}
+
+@media (max-width:1090px) {
+  .specific-movie>.s-movie>.s-movie-text {
+    max-width: none;
   }
 }
